--- a/snippets/package.json
+++ b/snippets/package.json
@@ -4,6 +4,12 @@
 		"snippets": [
 			{
 				"language": [
+					"all"
+				],
+				"path": "./all.json"
+			},
+			{
+				"language": [
 					"javascript",
 					"javascriptreact",
 					"typescript",
