--- a/snippets/package.json
+++ b/snippets/package.json
@@ -4,15 +4,33 @@
 		"snippets": [
 			{
 				"language": [
+					"gitignore"
+				],
+				"path": "./base/git.json"
+			},
+			{
+				"language": [
 					"editorconfig"
 				],
-				"path": "./editorconfig.json"
+				"path": "./base/editorconfig.json"
 			},
 			{
 				"language": [
 					"lua"
 				],
-				"path": "./lua.json"
+				"path": "./base/lua.json"
+			},
+			{
+				"language": [
+					"astro"
+				],
+				"path": "./js/astro.json"
+			},
+			{
+				"language": [
+					"svelte"
+				],
+				"path": "./js/svelte.json"
 			},
 			{
 				"language": [
@@ -21,7 +39,25 @@
 					"typescript",
 					"typescriptreact"
 				],
-				"path": "./react.json"
+				"path": "./js/react.json"
+			},
+			{
+				"language": [
+					"javascript",
+					"javascriptreact",
+					"typescript",
+					"typescriptreact"
+				],
+				"path": "./js/mui.json"
+			},
+			{
+				"language": [
+					"javascript",
+					"javascriptreact",
+					"typescript",
+					"typescriptreact"
+				],
+				"path": "./js/next.json"
 			}
 		]
 	}
