added strawhat rust snippet and updated plugins

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -4,6 +4,12 @@
 		"snippets": [
 			{
 				"language": [
+					"rust"
+				],
+				"path": "./rust/rust.json"
+			},
+			{
+				"language": [
 					"sh"
 				],
 				"path": "./base/sh.json"
