--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,15 @@
 		"outDir": "lua",
 		"target": "ESNext",
 		"lib": ["ESNext"],
-		"types": ["lua-types/5.1", "@gkzhb/lua-types-nvim"],
+		"types": ["lua-types/5.1", "@gkzhb/lua-types-nvim", "./lua/vim.d.ts"],
 		"strict": true
 	},
 	"tstl": {
-		"luaTarget": "JIT",
 		"luaLibImport": "require-minimal",
-		"noResolvePaths": ["zod"]
+		"luaTarget": "JIT",
+		"noResolvePaths": ["zod", "lang-schema"],
+		"tstlVerbose": false
 	},
 	"include": ["lua/**/*.ts"],
-	"exclude": ["schema.*", "schema.ts"]
+	"exclude": ["lua/**/schema.ts", "lua/**/schema.json"]
 }
