--- a/.luarc.json
+++ b/.luarc.json
@@ -3,6 +3,7 @@
 	"workspace.library": [
 		"lua",
 		"~/.local/share/nvim/lazy/",
-		"/opt/homebrew/Cellar/neovim/0.11.0/share/nvim/runtime"
+		"/opt/homebrew/Cellar/neovim/0.11.0/share/nvim/runtime",
+		"/Users/stephanrandle/.local/share/bob/v0.11.4/share/nvim/runtime"
 	]
 }
