--- a/.luarc.json
+++ b/.luarc.json
@@ -1,9 +1,10 @@
 {
+	"$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
+	"runtime.version": "Lua 5.1",
 	"workspace.checkThirdParty": "Disable",
 	"workspace.library": [
 		"lua",
 		"~/.local/share/nvim/lazy/",
-		"/opt/homebrew/Cellar/neovim/0.11.0/share/nvim/runtime",
-		"/Users/stephanrandle/.local/share/bob/v0.11.4/share/nvim/runtime"
+		"${env:HOME}/.local/share/bob/v0.11.4/share/nvim/runtime"
 	]
 }
