--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"fmt:write": "prettier . --write",
 		"build:schema": "node ./scripts/build-schema.mjs",
 		"snippets:sync": "node ./scripts/snippets-sync.mjs",
-		"snippets:merge": "node ./scripts/snippets-merge.mjs"
+		"snippets:merge": "node ./scripts/snippets-merge.mjs",
+		"prepare": "husky"
 	},
 	"prettier": {
 		"quoteProps": "consistent",
@@ -23,6 +24,7 @@
 	"devDependencies": {
 		"@gkzhb/lua-types-nvim": "^0.0.7",
 		"@prettier/plugin-lua": "^0.0.3",
+		"husky": "^4.3.8",
 		"lua-types": "^2.13.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-organize-imports": "^4.2.0",
@@ -30,5 +32,8 @@
 		"typescript": "^5.9.2",
 		"typescript-to-lua": "^1.32.0",
 		"zod": "^4.1.5"
+	},
+	"hooks": {
+		"pre-commit": "echo 'test'"
 	}
 }
