--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"typescript-to-lua": "^1.32.0",
 		"zod": "^4.1.5"
 	},
-	"hooks": {
-		"pre-commit": "echo 'test'"
+	"husky": {
+		"hooks": {
+			"pre-commit": "echo 'test'"
+		}
 	}
 }
