chore: add lint-staged and commitlint

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-lazy-lock.json
-node_modules
-lualib_bundle.lua
-scripts/language-pack.json
-**/*schema.lua
 **/*schema.json
-lua/constants/*.lua
-lua/plugins/ui/dashboard/*.lua
+**/*schema.lua
+*import.lua
+lazy-lock.json
+lua/config/constants.lua
+lua/icons/*.lua
+lua/keys/*.lua
+lua/plugins/enabled.lua
 lua/plugins/lang/enabled.lua
 lua/plugins/lang/init.lua
 lua/plugins/lang/packs.lua
-lua/plugins/enabled.lua
-lua/icons/*.lua
-lua/keys/*.lua
-*import.lua
+lua/plugins/ui/dashboard/*.lua
+lualib_bundle.lua
+node_modules
+scripts/language-pack.json
