chore: moved modes options generation to script

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ lazy-lock.json
 lua/config/constants.lua
 lua/icons/*.lua
 lua/keys/*.lua
+lua/keys/modes.json
 lua/plugins/enabled.lua
 lua/plugins/lang/enabled.lua
 lua/plugins/lang/init.lua
