feat: moved all schemas to unified folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ lazy-lock.json
 lua/config/constants.lua
 lua/icons/*.lua
 lua/keys/*.lua
-lua/keys/modes.json
+lua/schemas/*.lua
+lua/schemas/*.json
 lua/plugins/enabled.lua
 lua/plugins/lang/enabled.lua
 lua/plugins/lang/init.lua
