--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://raw.githubusercontent.com/TypeScriptToLua/TypeScriptToLua/master/tsconfig-schema.json",
 	"include": ["lua/**/*.ts"],
-	"exclude": ["lua/schemas/*.ts",],
+	"exclude": ["lua/schemas/*.ts"],
 	"compilerOptions": {
 		"allowJs": false,
 		"allowSyntheticDefaultImports": true,
