--- a/.luarc.json
+++ b/.luarc.json
@@ -1,9 +1,10 @@
 {
 	"runtime.version": "Lua 5.1",
 	"workspace.checkThirdParty": "Disable",
+	"diagnostics.globals": ["vim"],
 	"workspace.library": [
 		"lua",
-		"${env:HOME}/.local/share/nvim/lazy/",
-		"${env:HOME}/.local/share/bob/v0.11.4/share/nvim/runtime"
+		"$VIMRUNTIME",
+		"${env:HOME}/.local/share/nvim/lazy/"
 	]
 }
