--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ lazy-lock.json
 lua/config/constants.lua
 lua/icons/*.lua
 lua/keys/*.lua
+lua/utils/tailwindcss.lua
 lua/schemas/modes.ts
 lua/schemas/*.lua
 lua/schemas/*.json
