--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
 **/*schema.json
 **/*schema.lua
 *import.lua
+bloat.json
+deps
+dist
 lua/config/constants.lua
 lua/icons/*.lua
 lua/keys/*.lua
-lua/utils/tailwindcss.lua
-lua/schemas/modes.ts
-lua/schemas/*.lua
-lua/schemas/*.json
 lua/plugins/enabled.lua
 lua/plugins/lang/enabled.lua
 lua/plugins/lang/init.lua
 lua/plugins/lang/packs.lua
 lua/plugins/ui/dashboard/*.lua
+lua/schemas/*.json
+lua/schemas/*.lua
+lua/schemas/modes.ts
+lua/utils/tailwindcss.lua
 lualib_bundle.lua
 node_modules
 scripts/language-pack.json
