--- a/package.json
+++ b/package.json
@@ -1,50 +1,21 @@
 {
-	"private": true,
 	"name": "nvim",
 	"version": "0.0.0",
+	"private": true,
 	"type": "module",
 	"scripts": {
 		"prebuild": "pnpm run prepare:schema",
 		"build": "tstl",
 		"build:bloat": "node ./lua/plugins/debug/bloat.js",
+		"build:schema": "node ./lua/schemas/build.mjs",
 		"dev": "tstl --watch",
-		"lint": "eslint .",
 		"fmt:check": "prettier . --check",
 		"fmt:write": "prettier . --write",
-		"build:schema": "node ./lua/schemas/build.mjs",
-		"snippets:merge": "node ./snippets/merge.mjs",
+		"lint": "eslint .",
+		"prepare": "husky",
 		"prepare:schema": "ONLY_PREPARE_SCHEMA=true node ./lua/schemas/build.mjs",
-		"prepare": "husky"
-	},
-	"prettier": {
-		"quoteProps": "consistent",
-		"plugins": [
-			"prettier-plugin-organize-imports",
-			"prettier-plugin-sort-package-json",
-			"@prettier/plugin-lua"
-		]
-	},
-	"devDependencies": {
-		"@commitlint/cli": "^19.8.1",
-		"@commitlint/config-conventional": "^19.8.1",
-		"@eslint/js": "^9.39.1",
-		"@eslint/json": "^0.14.0",
-		"@eslint/markdown": "^7.5.1",
-		"@gkzhb/lua-types-nvim": "^0.0.7",
-		"@prettier/plugin-lua": "^0.0.3",
-		"eslint": "^9.39.1",
-		"eslint-plugin-import-zod": "^1.2.1",
-		"globals": "^16.5.0",
-		"husky": "^9.1.7",
-		"lint-staged": "^16.1.6",
-		"lua-types": "^2.13.1",
-		"prettier": "^3.6.2",
-		"prettier-plugin-organize-imports": "^4.2.0",
-		"prettier-plugin-sort-package-json": "^1.1.0",
-		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.48.1",
-		"typescript-to-lua": "^1.32.0",
-		"zod": "^4.1.5"
+		"release": "auto shipit",
+		"snippets:merge": "node ./snippets/merge.mjs"
 	},
 	"commitlint": {
 		"extends": [
@@ -56,5 +27,50 @@
 			"prettier --write",
 			"eslint --fix"
 		]
+	},
+	"prettier": {
+		"plugins": [
+			"prettier-plugin-organize-imports",
+			"prettier-plugin-packagejson",
+			"@prettier/plugin-lua"
+		],
+		"quoteProps": "consistent",
+		"overrides": [
+			{
+				"files": [
+					".autorc"
+				],
+				"options": {
+					"parser": "json"
+				}
+			}
+		]
+	},
+	"devDependencies": {
+		"@auto-it/conventional-commits": "^11.3.6",
+		"@auto-it/git-tag": "^11.3.6",
+		"@auto-it/upload-assets": "^11.3.6",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@eslint/js": "^9.39.1",
+		"@eslint/json": "^0.14.0",
+		"@eslint/markdown": "^7.5.1",
+		"@gkzhb/lua-types-nvim": "^0.0.7",
+		"@manypkg/find-root": "^3.1.0",
+		"@prettier/plugin-lua": "^0.0.3",
+		"auto": "^11.3.6",
+		"eslint": "^9.39.1",
+		"eslint-plugin-import-zod": "^1.2.1",
+		"globals": "^16.5.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.1.6",
+		"lua-types": "^2.13.1",
+		"prettier": "^3.6.2",
+		"prettier-plugin-organize-imports": "^4.2.0",
+		"prettier-plugin-packagejson": "2.5.20",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.48.1",
+		"typescript-to-lua": "^1.32.0",
+		"zod": "^4.1.5"
 	}
 }
