--- a/package.json
+++ b/package.json
@@ -72,5 +72,6 @@
 		"typescript-eslint": "^8.48.1",
 		"typescript-to-lua": "^1.32.0",
 		"zod": "^4.1.5"
-	}
+	},
+	"packageManager": "pnpm@10.13.1"
 }
